--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,8 @@ tags
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
